--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "io.ionic.starter",
+  "appId": "gr.CodingSheep.StepCounter",
   "appName": "StepCounter",
   "bundledWebRuntime": false,
   "npmClient": "npm",
