--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "StepCounter",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Dimitris Provatas",
+  "homepage": "https://github.com/Dimitris-Provatas",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -24,7 +24,9 @@
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/stepcounter": "^5.24.0",
     "@ionic/angular": "^5.0.0",
+    "cordova-plugin-stepcounter": "^1.0.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -54,5 +56,5 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "A simple step counter that you can trust it won't steal your information."
 }
