--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "@angular/router": "~8.2.14",
     "@capacitor/android": "^2.0.1",
     "@capacitor/core": "2.0.1",
+    "@ionic-native/browser-tab": "^5.24.0",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/native-storage": "^5.24.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/stepcounter": "^5.24.0",
     "@ionic/angular": "^5.0.0",
+    "cordova-plugin-browsertab": "^0.2.0",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-stepcounter": "^1.0.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
