--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.14",
     "@capacitor/android": "^2.0.1",
     "@capacitor/core": "2.0.1",
+    "@ionic-native/background-geolocation": "^5.24.0",
     "@ionic-native/background-mode": "^5.24.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/native-storage": "^5.24.0",
@@ -28,6 +29,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/stepcounter": "^5.24.0",
     "@ionic/angular": "^5.0.0",
+    "@mauron85/cordova-plugin-background-geolocation": "^3.1.0",
     "cordova-plugin-background-mode": "^0.7.3",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-nativestorage": "^2.3.2",
