--- a/package.json
+++ b/package.json
@@ -24,16 +24,20 @@
     "@ionic-native/background-geolocation": "^5.24.0",
     "@ionic-native/background-mode": "^5.24.0",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/diagnostic": "^5.25.0",
     "@ionic-native/native-storage": "^5.24.0",
+    "@ionic-native/open-native-settings": "^5.25.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/stepcounter": "^5.24.0",
     "@ionic/angular": "^5.0.0",
     "@mauron85/cordova-plugin-background-geolocation": "^3.1.0",
+    "cordova-open-native-settings": "^1.5.2",
     "cordova-plugin-background-mode": "^0.7.3",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-stepcounter": "^1.0.1",
+    "cordova.plugins.diagnostic": "^5.0.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
